--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -40,7 +40,7 @@
     },
     "extra": {
       "weatherApiKey": "774e97346d4bb1c773475855b2324f26",
-      "apiBaseUrl": "http://localhost:5000/api"
+      "apiBaseUrl": "http://10.0.0.68:5000/api"
     }
   }
 }
