--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,8 @@
     "test:coverage": "jest --coverage",
     "test:components": "jest --testPathPattern=components",
     "test:screens": "jest --testPathPattern=screens",
+    "test:logic": "jest --testPathPattern='logic|utils|hooks|context'",
+    "test:no-components": "jest --testPathIgnorePatterns='LoginScreen.test.tsx|LoginScreen.simple.test.tsx'",
     "start": "expo start",
     "prebuild": "node scripts/set-env.mjs",
     "build": "expo build",
@@ -21,7 +23,8 @@
   "jest": {
     "preset": "jest-expo",
     "setupFilesAfterEnv": [
-      "@testing-library/jest-native/extend-expect"
+      "@testing-library/jest-native/extend-expect",
+      "<rootDir>/jest-setup.js"
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
@@ -42,7 +45,8 @@
       "context/**/*.{ts,tsx}",
       "!**/*.d.ts",
       "!**/node_modules/**"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -84,7 +88,7 @@
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
   "private": true
