--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,5 +29,8 @@
     "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
