--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -24,7 +24,8 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.chesneybrooke.lumberlink",
-      "versionCode": 1
+      "versionCode": 1,
+      "edgeToEdgeEnabled": false
     },
     "web": {
       "bundler": "metro",
