--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,8 +15,8 @@
     "prebuild": "node scripts/set-env.mjs",
     "build": "expo build",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
